--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,18 +1,165 @@
-on:
-  push:
-    paths: ['**.R', 'tests/**', '**.Rd', '**.c', '**.cpp', '**.h', '**.hpp', 'DESCRIPTION', 'NAMESPACE', 'MAKEVARS', 'MAKEVARS.win', '**.yml']
-  pull_request:
-    paths: ['**.R', 'tests/**', '**.Rd', '**.c', '**.cpp', '**.h', '**.hpp', 'DESCRIPTION', 'NAMESPACE', 'MAKEVARS', 'MAKEVARS.win']
-  schedule:
-    - cron:  '13 12 * * 1-5'
+name: Reusable workflow for JASP unit tests
 
-name: unit-tests
+on:
+  workflow_dispatch:
+    inputs:
+      needs_JAGS:
+        description: 'Should JAGS be available?'
+        required: false
+        type: boolean
+        default: false
+      needs_igraph:
+        description: '(Linux only) Should igraph be recompiled?'
+        required: false
+        type: boolean
+        default: false
+      continue_on_schedule:
+        description: 'Should the workflow also be run on a schedule? By default (false), this only happens when the github.repository_owner is jasp-stats.'
+        type: boolean
+        default: false
 
 jobs:
+  scheduled-run-check:
+
+    runs-on: ubuntu-latest
+    outputs:
+      status: ${{ steps.check.outputs.status }}
+
+    steps:
+    - id: check
+      name: Check for a scheduled run
+      run: |
+        if [ ${{ inputs.continue_on_schedule == 'true' || github.event_name != 'schedule' || github.repository_owner != 'jasp-stats' }} ]; then
+          echo "::set-output name=status::success"
+        else
+          echo "::set-output name=status::error"
+        fi
+      shell: bash
 
   unit-tests:
 
-    uses: jasp-stats/jasp-actions/.github/workflows/unittests.yml@master
-    with:
-      needs_JAGS:   false
-      needs_igraph: false
+    needs: scheduled-run-check
+    if: needs.scheduled-run-check.outputs.status == 'success'
+
+    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.os }} (R ${{ matrix.r }})
+
+    strategy:
+      fail-fast: false
+      matrix:
+        r: [release]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+
+    env:
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      R_REMOTES_UPGRADE: never
+      VDIFFR_RUN_TESTS: true
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      _R_CHECK_LENGTH_1_CONDITION_: TRUE #deprecated from R 4.2.0
+      _R_CHECK_MATRIX_DATA_: TRUE # only works from R 4.2.0 onwards
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.r }}
+
+      - name: Install system dependencies on macOS
+        if: runner.os == 'macOS'
+        run: |
+          # see https://github.com/orgs/Homebrew/discussions/4612
+          unset HOMEBREW_NO_INSTALL_FROM_API
+          brew update
+          brew install --cask xquartz
+          brew install libarchive
+        shell: bash
+
+      - name: Install system dependencies on macOS specific to R devel
+        if: runner.os == 'macOS' && matrix.r == 'devel'
+        run: |
+          # ragg                                          requires harfbuzz fribidi
+          # The dependencies of the two R packages below are required for compiling from source on Ubuntu, but macOS seems fine without them
+          # credentials   (dependency of usethis)         requires libgit2
+          # curl          (dependency of usethis)         requires openssl
+
+          brew install harfbuzz fribidi libgit2 openssl curl
+        shell: bash
+
+      - name: Download JAGS and set JAGS_HOME on Windows
+        if: runner.os == 'Windows' && inputs.needs_JAGS
+        run: |
+          beforeR420 <- getRversion() < "4.2.0"
+
+          jagsUrl <- if (beforeR420) {
+            'https://static.jasp-stats.org/development/JAGS-4.3.0-Windows.zip'
+          } else {
+            'https://static.jasp-stats.org/development/JAGS-4.3.1-Windows.zip'
+          }
+
+          destfile <- 'JAGS-Windows.zip'
+          download.file(jagsUrl, destfile = destfile)
+          unzip(destfile, exdir = 'JAGS')
+
+          con <- file(description = Sys.getenv("GITHUB_ENV"), open = "a")
+          on.exit(close(con))
+
+          jagsHome <- jagsRoot <- normalizePath("JAGS", winslash = "/")
+          cat("JAGS_HOME=", jagsHome, "\n", sep = "", file = con)
+          cat("JAGS_ROOT=", jagsRoot, "\n", sep = "", file = con)
+
+        working-directory: ..
+        shell: Rscript {0}
+
+      - name: Install JAGS on macOS
+        if: runner.os == 'macOS' && inputs.needs_JAGS
+        run: |
+          # rm '/usr/local/bin/gfortran'
+          brew install jags
+        shell: bash
+
+      - name: Install system dependencies on linux
+        if: runner.os == 'Linux'
+        run: |
+          # ragg                                          requires libharfbuzz-dev libfribidi-dev
+          # credentials   (dependency of usethis)         requires libgit2-dev
+          # curl          (dependency of usethis)         requires libcurl4-openssl-dev
+          # libicu   (dependency of igraph or stringi...) requires libicu libicu-dev
+
+          sudo apt install libharfbuzz-dev libfribidi-dev libgit2-dev libcurl4-openssl-dev libicu*
+        shell: bash
+
+      - name: Set environment variable to never compile packages on Windows and macOS
+        if: runner.os != 'Linux' && matrix.r != 'devel'
+        run: |
+          # don't try to install new pkgs versions from source (which often requires additional system dependencies which, when missing, lead to errors, e.g., ragg).
+          cat("\noptions(install.packages.compile.from.source = \"never\")\n", file = "~/.Rprofile", sep = "", append = TRUE)
+        shell: Rscript {0}
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::rcmdcheck
+            github::jasp-stats/jaspTools
+          needs: check
+          cache-version: 3
+
+      - name: Install JAGS on Linux
+        if: runner.os == 'Linux' && inputs.needs_JAGS
+        run: sudo apt install jags
+        shell: bash
+
+      - name: Setup jaspTools
+        run: |
+          jaspTools::setupJaspTools()
+        shell: Rscript {0}
+
+      # so Rstudio's binary for igraph appears to be incompatible (i.e., crashes hard) with GitHub actions. Instead, we install igraph from source
+      - name: Make sure igraph is installed from source
+        if: runner.os == 'Linux' && inputs.needs_igraph
+        run: install.packages("igraph", type = "source", repos = "https://cloud.r-project.org/")
+        shell: Rscript {0}
+
+      - name: Run unit tests
+        run: source("tests/testthat.R")
+        shell: Rscript {0}
